--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,19 @@ gunicorn==22.0.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
 MarkupSafe==2.1.5
-numpy==1.23.5
+numpy==2.0.0
 packaging==24.1
-pandas==1.5.3
+pandas==2.2.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 requests==2.32.3
+scikit-learn==1.5.0
+scipy==1.13.1
 six==1.16.0
+threadpoolctl==3.5.0
 tzdata==2024.1
 urllib3==2.2.2
 Werkzeug==3.0.3
